Added hamburger menu and updated pricing section

--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
     <p>Your Business, Online in 3 Days</p>
   </header>
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#projects">Projects</a>
-    <a href="#services">Services</a>
-    <a href="#pricing">Pricing</a>
-    <a href="#contact">Contact</a>
-  </nav>
+ <nav class="navbar">
+  <div class="brand">Jirani Web Hub</div>
+  <button class="hamburger" onclick="toggleMenu()">☰</button>
+  <ul class="nav-links" id="navLinks">
+    <li><a href="#about">About</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#services">Services</a></li>
+    <li><a href="#pricing">Pricing</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
+
 
   <section id="about">
     <h2>About Me</h2>
@@ -95,15 +100,15 @@
       <tbody>
         <tr>
           <td>Basic Landing Page</td>
-          <td>1,500 – 3,000</td>
+          <td>1,000 – 1,500</td>
         </tr>
         <tr>
           <td>Business Website (3–5 pages)</td>
-          <td>4,000 – 8,000</td>
+          <td>1,500 – 2,300</td>
         </tr>
         <tr>
           <td>E-commerce with WhatsApp</td>
-          <td>5,000 – 12,000</td>
+          <td>2,500 – 4,000</td>
         </tr>
         <tr>
           <td>Hosting & Domain Setup</td>
