--- a/index.html
+++ b/index.html
@@ -63,7 +63,30 @@
         Explore the live Twin Allan demo: 
         <a href="https://jiraniwebhub.github.io/twinallan/" target="_blank" rel="noopener">https://jiraniwebhub.github.io/twinallan/</a>
     </p>
+
       </div>
+      <div class="card">
+  <h3>Fashion Hub</h3>
+  <p>A beautiful online clothing store featuring product images, WhatsApp ordering, and mobile-first design.</p>
+  <p>
+    Live Demo:
+    <a href="https://jiraniwebhub.github.io/fashionhub/" target="_blank" rel="noopener">
+      https://jiraniwebhub.github.io/fashionhub/
+    </a>
+  </p>
+</div>
+
+<div class="card">
+      <h3>SmartFix Solutions</h3>
+      <p>Website for a repair and IT solutions service. Responsive with WhatsApp contact form.</p>
+      <p>
+        Live Demo:
+        <a href="https://jiraniwebhub.github.io/smartfix/" target="_blank" rel="noopener">
+          https://jiraniwebhub.github.io/smartfix/
+        </a>
+      </p>
+    </div>
+
     </div>
   </section>
 
@@ -132,6 +155,22 @@
   <footer>
     <p>&copy; 2024 Jirani Web Hub. Built by Kelvin Kariuki.</p>
   </footer>
+
+  <script>
+  const hamburger = document.querySelector(".hamburger");
+  const navLinks = document.querySelector(".nav-links");
+
+  hamburger.addEventListener("click", () => {
+    navLinks.classList.toggle("show");
+  });
+
+  // Optional: close menu after clicking a link
+  document.querySelectorAll(".nav-links a").forEach(link => {
+    link.addEventListener("click", () => {
+      navLinks.classList.remove("show");
+    });
+  });
+</script>
 
 </body>
 </html>
