addition to the html

--- a/index.html
+++ b/index.html
@@ -56,14 +56,23 @@
 </p>
       </div>
       <div class="card">
-        <h3>Twin Allan</h3>
+        <h3>Twin Allan Stationeries</h3>
+        <p>Service-based website for a cyber café and online services. Simple and professional.</p>
+
+         <p>
+        Explore the live Twin Allan Stationeries demo: 
+        <a href="https://jiraniwebhub.github.io/twinallan/" target="_blank" rel="noopener">https://jiraniwebhub.github.io/twinallan/</a>
+    </p>
+      </div>
+
+      <div class="card">
+        <h3>Twin Allan twinallan-enterprices/h3>
         <p>Service-based website for a cyber café and online services. Simple and professional.</p>
 
          <p>
         Explore the live Twin Allan demo: 
-        <a href="https://jiraniwebhub.github.io/twinallan/" target="_blank" rel="noopener">https://jiraniwebhub.github.io/twinallan/</a>
+        <a href="https://twinallan-enterprices.netlify.app/" target="_blank" rel="noopener">https://twinallan-enterprices.netlify.app/</a>
     </p>
-
       </div>
       <div class="card">
   <h3>Fashion Hub</h3>
