change in the html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
 
       <div class="card">
-        <h3>Twin Allan twinallan-enterprices/h3>
+        <h3>Twin Allan twinallan-enterprices</h3>
         <p>Service-based website for a cyber café and online services. Simple and professional.</p>
 
          <p>
