update on the service part in the html

--- a/index.html
+++ b/index.html
@@ -79,22 +79,33 @@
   <p>A beautiful online clothing store featuring product images, WhatsApp ordering, and mobile-first design.</p>
   <p>
     Live Demo:
-    <a href="https://jiraniwebhub.github.io/fashionhub/" target="_blank" rel="noopener">
-      https://jiraniwebhub.github.io/fashionhub/
+    <a href="http://rafikithrifts254.netlify.app" target="_blank" rel="noopener">
+     http://rafikithrifts254.netlify.app
     </a>
   </p>
 </div>
 
 <div class="card">
-      <h3>SmartFix Solutions</h3>
-      <p>Website for a repair and IT solutions service. Responsive with WhatsApp contact form.</p>
-      <p>
-        Live Demo:
-        <a href="https://jiraniwebhub.github.io/smartfix/" target="_blank" rel="noopener">
-          https://jiraniwebhub.github.io/smartfix/
-        </a>
-      </p>
-    </div>
+  <h3>SmartFix Solutions</h3>
+  <p>Website for a repair and IT solutions service. Responsive with WhatsApp contact form.</p>
+  <p>
+    Live Demo:
+    <a href="https://jiraniwebhub.github.io/smartfix/" target="_blank" rel="noopener">
+      https://jiraniwebhub.github.io/smartfix/
+    </a>
+  </p>
+</div>
+
+<div class="card">
+  <h3>Glow & Grace</h3>
+  <p>Website for a beauty and wellness salon. Features a booking system and service showcase.</p>
+  <p>
+    Live Demo:
+    <a href="http://glowandgracee.netlify.app" target="_blank" rel="noopener">
+      http://glowandgracee.netlify.app
+    </a>
+  </p>
+</div>
 
     </div>
   </section>
