update on html on fashion hub and Rafiki Thrifts

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         
        <p> Explore the live Rafiki Thrifts demo: 
-                <a href="https://jiraniwebhub.github.io/rafikithrifts/" target="_blank" rel="noopener">https://jiraniwebhub.github.io/rafikithrifts/</a>
+                <a href="http://rafikithrifts254.netlify.app" target="_blank" rel="noopener">http://rafikithrifts254.netlify.app</a>
 </p>
       </div>
       <div class="card">
@@ -79,8 +79,8 @@
   <p>A beautiful online clothing store featuring product images, WhatsApp ordering, and mobile-first design.</p>
   <p>
     Live Demo:
-    <a href="http://rafikithrifts254.netlify.app" target="_blank" rel="noopener">
-     http://rafikithrifts254.netlify.app
+    <a href="https://jiraniwebhub.github.io/fashionhub/" target="_blank" rel="noopener">
+      https://jiraniwebhub.github.io/fashionhub/
     </a>
   </p>
 </div>
