change in the html and css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+<meta name="description" content="Jirani Web Hub - Affordable websites for businesses, shops, and startups in Kenya.">
+  <meta name="keywords" content="web development, websites, e-commerce, landing pages, Nairobi, Kenya">
   <title>Jirani Web Hub</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -33,82 +36,63 @@
     <p>Hi, I’m Kelvin — a certified web developer based in Nairobi. I help small businesses get online fast with clean, mobile-friendly websites. Whether you need a landing page, an online shop, or a WhatsApp ordering system, I’ve got you covered.</p>
   </section>
 
-    
-</section>
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects">
-      <div class="card">
-        <h3>LuxeShop</h3>
-        <p>Modern e-commerce store built with HTML, CSS, and JavaScript. Deployed on Vercel.</p>
-        <p>
-        Explore the live LuxeShop demo: 
-        <a href="https://luxeshop-4kt3.vercel.app/" target="_blank" rel="noopener">https://luxeshop-4kt3.vercel.app/</a>
-    </p>
-      </div>
-      <div class="card">
-        <h3>Rafiki Thrifts</h3>
-        <p>Clothing store with WhatsApp ordering. Clean layout and mobile-first design.</p>
+   <section id="projects">
+  <h2>Projects</h2>
+  <div class="projects">
 
-        
-       <p> Explore the live Rafiki Thrifts demo: 
-                <a href="http://rafikithrifts254.netlify.app" target="_blank" rel="noopener">http://rafikithrifts254.netlify.app</a>
-</p>
-      </div>
-      <div class="card">
-        <h3>Twin Allan Stationeries</h3>
-        <p>Service-based website for a cyber café and online services. Simple and professional.</p>
-
-         <p>
-        Explore the live Twin Allan Stationeries demo: 
-        <a href="https://jiraniwebhub.github.io/twinallan/" target="_blank" rel="noopener">https://jiraniwebhub.github.io/twinallan/</a>
-    </p>
-      </div>
-
-      <div class="card">
-        <h3>Twin Allan twinallan-enterprices</h3>
-        <p>Service-based website for a cyber café and online services. Simple and professional.</p>
-
-         <p>
-        Explore the live Twin Allan demo: 
-        <a href="https://twinallan-enterprices.netlify.app/" target="_blank" rel="noopener">https://twinallan-enterprices.netlify.app/</a>
-    </p>
-      </div>
-      <div class="card">
-  <h3>Fashion Hub</h3>
-  <p>A beautiful online clothing store featuring product images, WhatsApp ordering, and mobile-first design.</p>
-  <p>
-    Live Demo:
-    <a href="https://jiraniwebhub.github.io/fashionhub/" target="_blank" rel="noopener">
-      https://jiraniwebhub.github.io/fashionhub/
-    </a>
-  </p>
-</div>
-
-<div class="card">
-  <h3>SmartFix Solutions</h3>
-  <p>Website for a repair and IT solutions service. Responsive with WhatsApp contact form.</p>
-  <p>
-    Live Demo:
-    <a href="https://jiraniwebhub.github.io/smartfix/" target="_blank" rel="noopener">
-      https://jiraniwebhub.github.io/smartfix/
-    </a>
-  </p>
-</div>
-
-<div class="card">
-  <h3>Glow & Grace</h3>
-  <p>Website for a beauty and wellness salon. Features a booking system and service showcase.</p>
-  <p>
-    Live Demo:
-    <a href="http://glowandgracee.netlify.app" target="_blank" rel="noopener">
-      http://glowandgracee.netlify.app
-    </a>
-  </p>
-</div>
-
+    <div class="card">
+      <h3>LuxeShop</h3>
+      <p>Modern e-commerce store built with HTML, CSS, and JavaScript. Deployed on Vercel.</p>
+      <div class="price-badge">Ksh 3,000 – 4,500</div>
+      <a href="https://luxeshop-4kt3.vercel.app/" target="_blank" class="view-btn">View Site</a>
     </div>
-  </section>
+
+    <div class="card">
+      <h3>Rafiki Thrifts</h3>
+      <p>Clothing store with WhatsApp ordering. Clean layout and mobile-first design.</p>
+      <div class="price-badge">Ksh 2,500 – 3,500</div>
+      <a href="http://rafikithrifts254.netlify.app" target="_blank" class="view-btn">View Site</a>
+    </div>
+
+    <div class="card">
+      <h3>Twin Allan Stationeries</h3>
+      <p>Service-based website for a cyber café and online services. Simple and professional.</p>
+      <div class="price-badge">Ksh 1,500 – 2,200</div>
+      <a href="https://jiraniwebhub.github.io/twinallan/" target="_blank" class="view-btn">View Site</a>
+    </div>
+
+    <div class="card">
+      <h3>Twin Allan Enterprises</h3>
+      <p>Updated version hosted on Netlify with cleaner layout and performance.</p>
+      <div class="price-badge">Ksh 2,000 – 2,800</div>
+      <a href="https://twinallan-enterprices.netlify.app/" target="_blank" class="view-btn">View Site</a>
+    </div>
+
+    <div class="card">
+      <h3>Fashion Hub</h3>
+      <p>Online fashion store with product images, WhatsApp ordering, and mobile-first layout.</p>
+      <div class="price-badge">Ksh 2,500 – 3,200</div>
+      <a href="https://jiraniwebhub.github.io/fashionhub/" target="_blank" class="view-btn">View Site</a>
+    </div>
+
+    <div class="card">
+      <h3>SmartFix Solutions</h3>
+      <p>Repair and IT service site with WhatsApp contact form. Responsive and clean.</p>
+      <div class="price-badge">Ksh 1,800 – 2,500</div>
+      <a href="https://jiraniwebhub.github.io/smartfix/" target="_blank" class="view-btn">View Site</a>
+    </div>
+
+    <div class="card">
+      <h3>Glow & Grace</h3>
+      <p>Salon and spa website with service showcase and WhatsApp booking system.</p>
+      <div class="price-badge">Ksh 3,000 – 4,000</div>
+      <a href="http://glowandgracee.netlify.app" target="_blank" class="view-btn">View Site</a>
+    </div>
+
+  </div>
+</section>
+
+
 
   <section id="services">
     <h2>Services</h2>
@@ -132,39 +116,67 @@
     </div>
   </section>
 
-  <section id="pricing">
-    <h2>Pricing</h2>
-    <table class="pricing">
-      <thead>
-        <tr>
-          <th>Type of Website</th>
-          <th>Price Range (KES)</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Basic Landing Page</td>
-          <td>1,000 – 1,500</td>
-        </tr>
-        <tr>
-          <td>Business Website (3–5 pages)</td>
-          <td>1,500 – 2,300</td>
-        </tr>
-        <tr>
-          <td>E-commerce with WhatsApp</td>
-          <td>2,500 – 4,000</td>
-        </tr>
-        <tr>
-          <td>Hosting & Domain Setup</td>
-          <td>1,500 – 3,000</td>
-        </tr>
-        <tr>
-          <td>Monthly Support</td>
-          <td>500 – 1,000</td>
-        </tr>
-      </tbody>
-    </table>
-  </section>
+<section id="pricing">
+  <h2>Pricing Plans</h2>
+  <p class="pricing-note">Affordable websites for every budget — starting from Ksh 1,000</p>
+
+  <div class="pricing-cards">
+
+    <div class="pricing-card starter">
+      <h3>Starter Package</h3>
+      <p>Great for personal brands and side hustles</p>
+      <ul>
+        <li>1-page website</li>
+        <li>WhatsApp contact button</li>
+        <li>Looks great on phone and computer</li>
+        <li>Delivered in 2–3 days</li>
+      </ul>
+      <div class="price">From Ksh 1,000</div>
+      <a class="whatsapp-btn" 
+         href="https://wa.me/254799757915?text=Hi%20Jirani%20Web%20Hub%2C%20I'm%20interested%20in%20the%20Starter%20Package%20(Ksh%201%2C000).%20Please%20guide%20me%20on%20what%20you%20need%20to%20start." 
+         target="_blank">
+         Start With This Plan
+      </a>
+    </div>
+
+    <div class="pricing-card standard">
+      <h3>Business Package</h3>
+      <p>For small businesses, shops, and freelancers</p>
+      <ul>
+        <li>3–5 pages (Home, About, Services, Contact)</li>
+        <li>WhatsApp or contact form integration</li>
+        <li>Mobile responsive & hosting help</li>
+        <li>1 free revision</li>
+      </ul>
+      <div class="price">Ksh 1,800 – 2,800</div>
+      <a class="whatsapp-btn" 
+         href="https://wa.me/254799757915?text=Hi%20Jirani Web Hub%2C%20I'd%20like%20to%20get%20the%20Business%20Package%20(Ksh%201%2C800%20–%202%2C800).%20Kindly%20share%20what%20you%20need%20to%20get%20started." 
+         target="_blank">
+         Start With This Plan
+      </a>
+    </div>
+
+    <div class="pricing-card premium">
+      <h3>Shop/Pro Package</h3>
+      <p>For businesses that want to sell online</p>
+      <ul>
+        <li>Online shop or WhatsApp store setup</li>
+        <li>We upload your first 10–20 products</li>
+        <li>We set up your domain and hosting</li>
+        <li>Free website help & updates for 1 month</li>
+      </ul>
+      <div class="price">Ksh 3,000 – 4,500</div>
+      <a class="whatsapp-btn" 
+         href="https://wa.me/254799757915?text=Hello%20Jirani Web Hub%2C%20I'm%20ready%20for%20the%20Shop%2FPro%20Package%20(Ksh%203%2C000%20–%204%2C500).%20I'd%20like%20an%20online%20shop%20with%20product%20uploads%20and%20domain%20setup.%20Let's%20begin." 
+         target="_blank">
+         Start With This Plan
+      </a>
+    </div>
+
+  </div>
+</section>
+
+
 
   <section id="contact" class="contact">
     <h2>Contact Me</h2>
