change in the html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <meta name="keywords" content="web development, websites, e-commerce, landing pages, Nairobi, Kenya">
   <title>Jirani Web Hub</title>
   <link rel="stylesheet" href="styles.css" />
+  <head>
+  <title>My Site</title>
+
+</head>
+
 </head>
 <body>
 
@@ -205,6 +210,14 @@
     });
   });
 </script>
- 
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-XXXXXXXXXX');
+</script>
+
 </body>
 </html>
