--- a/index.html
+++ b/index.html
@@ -51,42 +51,42 @@
       <h3>LuxeShop</h3>
       <p>Modern e-commerce store built with HTML, CSS, and JavaScript. Deployed on Vercel.</p>
       <div class="price-badge">Ksh 3,000 – 4,500</div>
-      <a href="https://luxeshop-4kt3.vercel.app/" target="_blank" class="view-btn">View Site</a>
+      <a href="https://luxeshop254.netlify.app/" target="_blank" class="view-btn">View Site</a>
     </div>
 
     <div class="card">
       <h3>Rafiki Thrifts</h3>
       <p>Clothing store with WhatsApp ordering. Clean layout and mobile-first design.</p>
       <div class="price-badge">Ksh 2,500 – 3,500</div>
-      <a href="http://rafikithrifts254.netlify.app" target="_blank" class="view-btn">View Site</a>
+      <a href="https://rafikithrifts254.netlify.app" target="_blank" class="view-btn">View Site</a>
     </div>
 
     <div class="card">
       <h3>Twin Allan Stationeries</h3>
       <p>Service-based website for a cyber café and online services. Simple and professional.</p>
       <div class="price-badge">Ksh 1,500 – 2,200</div>
-      <a href="https://jiraniwebhub.github.io/twinallan/" target="_blank" class="view-btn">View Site</a>
+      <a href="http://twinallan-stationeries.netlify.app" target="_blank" class="view-btn">View Site</a>
     </div>
 
     <div class="card">
       <h3>Twin Allan Enterprises</h3>
       <p>Updated version hosted on Netlify with cleaner layout and performance.</p>
       <div class="price-badge">Ksh 2,000 – 2,800</div>
-      <a href="https://twinallan-enterprices.netlify.app/" target="_blank" class="view-btn">View Site</a>
+      <a href="https://twinallan-enterprise.netlify.app" target="_blank" class="view-btn">View Site</a>
     </div>
 
     <div class="card">
       <h3>Fashion Hub</h3>
       <p>Online fashion store with product images, WhatsApp ordering, and mobile-first layout.</p>
       <div class="price-badge">Ksh 2,500 – 3,200</div>
-      <a href="https://jiraniwebhub.github.io/fashionhub/" target="_blank" class="view-btn">View Site</a>
+      <a href="https://fashionhub254.netlify.app/" target="_blank" class="view-btn">View Site</a>
     </div>
 
     <div class="card">
       <h3>SmartFix Solutions</h3>
       <p>Repair and IT service site with WhatsApp contact form. Responsive and clean.</p>
       <div class="price-badge">Ksh 1,800 – 2,500</div>
-      <a href="https://jiraniwebhub.github.io/smartfix/" target="_blank" class="view-btn">View Site</a>
+      <a href="https://smart-fix.netlify.app" target="_blank" class="view-btn">View Site</a>
     </div>
 
     <div class="card">
@@ -95,6 +95,22 @@
       <div class="price-badge">Ksh 3,000 – 4,000</div>
       <a href="http://glowandgracee.netlify.app" target="_blank" class="view-btn">View Site</a>
     </div>
+
+    <div class="card">
+  <h3>Edmak Branding</h3>
+  <p>Edmak is a visual branding and merchandise company offering products like apparel, drinkware, caps, banners, vehicle branding, and more — all tailored for impactful business identity.</p>
+  <div class="price-badge">Ksh 4,000 – 7,000</div>
+  <a href="http://edmak.netlify.app" target="_blank" class="view-btn">View Site</a>
+</div>
+
+   
+    <div class="card">
+  <h3>Edmak Branding</h3>
+  <p>Edmak is a visual branding and merchandise company offering products like apparel, drinkware, caps, banners, vehicle branding, and more — all tailored for impactful business identity.</p>
+  <div class="price-badge">Ksh 4,000 – 7,000</div>
+  <a href="http://edmak.netlify.app" target="_blank" class="view-btn">View Site</a>
+</div>
+
 
   </div>
 </section>
