addition in html and css

--- a/index.html
+++ b/index.html
@@ -113,6 +113,62 @@
       <a href="https://rafikithrifts254.netlify.app" target="_blank" class="view-btn">View Site</a>
     </div>
 
+<section id="extra-services" class="services-section">
+  <h2>More Services We Offer</h2>
+  <div class="service-cards">
+
+    <div class="service-card">
+      <h3>Google Business Setup</h3>
+      <p>Show up on Google Search and Maps with a verified profile.</p>
+      <a href="https://wa.me/254799757915?text=Hi%2C%20I%20need%20Google%20Business%20setup" class="whatsapp-btn">Order Now</a>
+    </div>
+
+    <div class="service-card">
+      <h3>KRA, NHIF, NSSF Registration</h3>
+      <p>Quick online registration for essential government services.</p>
+      <a href="https://wa.me/254799757915?text=Hi%2C%20I%20need%20help%20with%20KRA%20or%20NHIF%20or%20NSSF%20registration" class="whatsapp-btn">Order Now</a>
+    </div>
+
+    <div class="service-card">
+      <h3>WhatsApp Catalog Setup</h3>
+      <p>Create a simple, clickable shop your customers can use instantly.</p>
+      <a href="https://wa.me/254799757915?text=Hi%2C%20please%20set%20up%20a%20WhatsApp%20catalog%20for%20me" class="whatsapp-btn">Order Now</a>
+    </div>
+
+    <div class="service-card">
+      <h3>Graphic Design & Branding</h3>
+      <p>Professional logos, flyers, and posters for your business or event.</p>
+      <a href="https://wa.me/254799757915?text=Hi%2C%20I%20need%20a%20flyer%20or%20branding%20design" class="whatsapp-btn">Order Now</a>
+    </div>
+
+    <div class="service-card">
+      <h3>Web Hosting & Maintenance</h3>
+      <p>We register your domain and manage your website monthly.</p>
+      <a href="https://wa.me/254799757915?text=Hi%2C%20I'm%20interested%20in%20website%20hosting%20and%20maintenance" class="whatsapp-btn">Order Now</a>
+    </div>
+
+    <div class="service-card">
+      <h3>Student Services (KUCCPS/HELB)</h3>
+      <p>Applications, portal help, and PDF form editing for students.</p>
+      <a href="https://wa.me/254799757915?text=Hi%2C%20please%20help%20me%20with%20a%20student%20service" class="whatsapp-btn">Order Now</a>
+    </div>
+
+    <div class="service-card">
+      <h3>Digital Business Cards</h3>
+      <p>Share your brand and contact info in a smart, modern way.</p>
+      <a href="https://wa.me/254799757915?text=Hi%2C%20I%20want%20a%20digital%20business%20card" class="whatsapp-btn">Order Now</a>
+    </div>
+
+    <div class="service-card">
+      <h3>Poster Design & Photo Cleanup</h3>
+      <p>We design great posters and clean your product pictures.</p>
+      <a href="https://wa.me/254799757915?text=Hi%2C%20please%20help%20me%20design%20a%20poster%20or%20clean%20photos" class="whatsapp-btn">Order Now</a>
+    </div>
+
+  </div>
+</section>
+
+
   </div>
 </section>
 
@@ -141,7 +197,7 @@
   </section>
 
 <section id="pricing">
-  <h2>Pricing Plans</h2>
+  <h2>Pricing Plans For The Websites</h2>
   <p class="pricing-note">Affordable websites for every budget — starting from Ksh 1,000</p>
 
   <div class="pricing-cards">
@@ -196,6 +252,29 @@
          Start With This Plan
       </a>
     </div>
+
+<div class="pricing-card custom">
+  <h3>Custom Services</h3>
+  <p>We offer a wide range of support services including:</p>
+  <ul>
+    <li>Business name registration (sole proprietorships & companies)</li>
+    <li>CV writing and formatting</li>
+    <li>Online applications (KUCCPS, HELB, NTSA, KRA, eCitizen)</li>
+    <li>Business permits and licensing support</li>
+    <li>AGPO & NCA registration assistance</li>
+    <li>Renewals and compliance help</li>
+    <li>Document editing, printing & lamination</li>
+    <li>Custom one-time tech help</li>
+  </ul>
+  <div class="price">Price depends on service</div>
+  <a class="whatsapp-btn" 
+     href="https://wa.me/254799757915?text=Hi%20Jirani%20Web%20Hub%2C%20I'm%20interested%20in%20your%20custom%20services%20(e.g.%20licensing%2C%20applications%2C%20CV%2C%20NCA%2C%20KRA%20help).%20Please%20guide%20me%20on%20pricing%20and%20how%20to%20start." 
+     target="_blank">
+     Request Custom Quote
+  </a>
+</div>
+
+
 
   </div>
 </section>
