--- a/index.html
+++ b/index.html
@@ -37,11 +37,18 @@
   </div>
 </nav>
 
+<section id="about">
+  <h2>About Us</h2>
+  <p>
+    Welcome to <strong>Jirani Web Hub</strong> — your trusted partner for affordable digital and business solutions in Kenya. We help small businesses, startups, and individuals build a strong online presence and access essential services with ease. 
+  </p>
+  <p>
+    From websites to business registration and document services, we’re here to make your journey smoother — fast, friendly, and stress-free.
+  </p>
+</section>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Hi, I’m Kelvin — a certified web developer based in Nairobi. I help small businesses get online fast with clean, mobile-friendly websites. Whether you need a landing page, an online shop, or a WhatsApp ordering system, I’ve got you covered.</p>
-  </section>
+</section>
+
 
    <section id="projects">
   <h2>Projects</h2>
