changes in html and css

--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
   <div class="price-badge">Ksh 4,000 – 7,000</div>
   <a href="http://edmak.netlify.app" target="_blank" class="view-btn">View Site</a>
 </div>
+  
 
+  
 
 <div class="card">
       <h3>LuxeShop</h3>
@@ -122,55 +124,42 @@
 
 <section id="extra-services" class="services-section">
   <h2>More Services We Offer</h2>
-  <div class="service-cards">
-
-    <div class="service-card">
+  <div class="try-service-boxes">
+    <div class="service-box">
       <h3>Google Business Setup</h3>
-      <p>Show up on Google Search and Maps with a verified profile.</p>
-      <a href="https://wa.me/254799757915?text=Hi%2C%20I%20need%20Google%20Business%20setup" class="whatsapp-btn">Order Now</a>
+      <button>Order Now</button>
     </div>
-
-    <div class="service-card">
+    <div class="service-box">
       <h3>KRA, NHIF, NSSF Registration</h3>
-      <p>Quick online registration for essential government services.</p>
-      <a href="https://wa.me/254799757915?text=Hi%2C%20I%20need%20help%20with%20KRA%20or%20NHIF%20or%20NSSF%20registration" class="whatsapp-btn">Order Now</a>
+      <button>Order Now</button>
     </div>
-
-    <div class="service-card">
+    <div class="service-box">
       <h3>WhatsApp Catalog Setup</h3>
-      <p>Create a simple, clickable shop your customers can use instantly.</p>
-      <a href="https://wa.me/254799757915?text=Hi%2C%20please%20set%20up%20a%20WhatsApp%20catalog%20for%20me" class="whatsapp-btn">Order Now</a>
+      <button>Order Now</button>
     </div>
-
-    <div class="service-card">
+    <div class="service-box">
       <h3>Graphic Design & Branding</h3>
-      <p>Professional logos, flyers, and posters for your business or event.</p>
-      <a href="https://wa.me/254799757915?text=Hi%2C%20I%20need%20a%20flyer%20or%20branding%20design" class="whatsapp-btn">Order Now</a>
+      <button>Order Now</button>
     </div>
-
-    <div class="service-card">
+    <div class="service-box">
       <h3>Web Hosting & Maintenance</h3>
-      <p>We register your domain and manage your website monthly.</p>
-      <a href="https://wa.me/254799757915?text=Hi%2C%20I'm%20interested%20in%20website%20hosting%20and%20maintenance" class="whatsapp-btn">Order Now</a>
+      <button>Order Now</button>
     </div>
-
-    <div class="service-card">
+    <div class="service-box">
       <h3>Student Services (KUCCPS/HELB)</h3>
-      <p>Applications, portal help, and PDF form editing for students.</p>
-      <a href="https://wa.me/254799757915?text=Hi%2C%20please%20help%20me%20with%20a%20student%20service" class="whatsapp-btn">Order Now</a>
+      <button>Order Now</button>
     </div>
-
-    <div class="service-card">
+    <div class="service-box">
       <h3>Digital Business Cards</h3>
-      <p>Share your brand and contact info in a smart, modern way.</p>
-      <a href="https://wa.me/254799757915?text=Hi%2C%20I%20want%20a%20digital%20business%20card" class="whatsapp-btn">Order Now</a>
+      <button>Order Now</button>
     </div>
-
-    <div class="service-card">
+    <div class="service-box">
       <h3>Poster Design & Photo Cleanup</h3>
-      <p>We design great posters and clean your product pictures.</p>
-      <a href="https://wa.me/254799757915?text=Hi%2C%20please%20help%20me%20design%20a%20poster%20or%20clean%20photos" class="whatsapp-btn">Order Now</a>
+      <button>Order Now</button>
     </div>
+  </div>
+</section>
+
 
   </div>
 </section>
@@ -184,22 +173,27 @@
   <section id="services">
     <h2>Services</h2>
     <div class="services">
+
       <div class="card">
         <h3>Landing Pages</h3>
         <p>Perfect for cafés, barbershops, and consultants who need a simple online presence.</p>
       </div>
+
       <div class="card">
         <h3>Online Shops</h3>
         <p>Sell clothes, cosmetics, or shoes with a clean storefront and WhatsApp checkout.</p>
       </div>
+
       <div class="card">
         <h3>Service Websites</h3>
         <p>Ideal for salons, cyber cafés, and agents. Showcase your services and contact info.</p>
       </div>
+
       <div class="card">
         <h3>WhatsApp Integration</h3>
         <p>Let customers place orders or book services directly via WhatsApp.</p>
       </div>
+
     </div>
   </section>
 
