--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
       <div class="price-badge">Ksh 2,500 – 3,500</div>
       <a href="https://rafikithrifts254.netlify.app" target="_blank" class="view-btn">View Site</a>
     </div>
-
-<section id="extra-services" class="services-section">
-  <h2>More Services We Offer</h2>
-  <div class="try-service-boxes">
+<div style="width: 100vw; overflow-x: hidden;">
+  <section id="extra-services" class="services-section">
+    <h2>More Services We Offer</h2>
+    <div class="try-service-boxes">
     <div class="service-box">
       <h3>Google Business Setup</h3>
       <button>Order Now</button>
