update in html and css

--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
     </div>
 <div style="width: 100vw; overflow-x: hidden;">
   <section id="extra-services" class="services-section">
-    <h2>More Services We Offer</h2>
-    <div class="try-service-boxes">
+   <section class="more-services">
+  <h2>More Services We Offer</h2>
+  <div class="try-service-boxes">
     <div class="service-box">
       <h3>Google Business Setup</h3>
       <button>Order Now</button>
@@ -160,9 +161,6 @@
   </div>
 </section>
 
-
-  </div>
-</section>
 
 
   </div>
